--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "description": "Node Server Testing Challenge",
   "scripts": {
-    "test": "jest --watch"
-  },
-  "jest": {
-    "testEnvironment": "node"
+    "test": "cross-env DB_ENV=testing jest --watch --verbose",
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -16,9 +14,15 @@
   "devDependencies": {
     "eslint": "^7.13.0",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.6",
     "supertest": "^6.0.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "knex": "^0.21.12",
+    "knex-cleaner": "^1.3.1",
+    "sqlite3": "^5.0.0"
   }
 }
